# dodge-stuff-game

./: .gitignore  CMakeLists.txt  README.md
include/: Entity.hpp  Math.hpp  Player.hpp  RenderWindow.hpp  Utils.hpp
src/: Entity.cpp  Math.cpp  Player.cpp  RenderWindow.cpp  main.cpp
